# paddock-view

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
frontend/: requirements.txt
frontend/src/app/: page.tsx
python/: .pre-commit-config.yaml  pyproject.toml
python/app/: drivers.py  main.py  settings.py
python/app/api/: main.py
python/app/db/: config.py  db.py
python/app/db/helpers/: datetime_adjusted.py
python/app/db/models/: base.py  drivers.py  grand_prix.py  session_types.py  sessions.py  teams.py
python/app/enums/: grand_prix.py  session_type.py
python/app/fetchers/: drivers.py  schedule.py
python/enum/: session_types.py
